--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Célula Humana Interativa</h1>
+    <a href="cell_3d.html" class="link-3d">Ver Versão 3D</a>
 
     <div class="cell-container">
         <img src="img_cell.png" alt="Célula Humana" class="cell-image">
